--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "cookie-universal": "^2.1.3",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "polka": "next",
+    "session-file-store": "^1.4.0",
     "sirv": "^0.4.0",
     "tailwindcss": "^1.2.0"
   },
