--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "sapper dev",
-    "build": "npx tailwindcss build src/styles/entry.css -o static/global.css && sapper build --legacy",
+    "build": "npx tailwindcss build src/styles/entry.css -o static/global.css && sapper build",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "styles:build": "npx tailwindcss build src/styles/entry.css -o static/global.css"
   },
   "dependencies": {
+    "@scout_apm/scout-apm": "^0.1.8",
     "compression": "^1.7.1",
     "cookie-universal": "^2.1.3",
     "express": "^4.17.1",
