--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "compression": "^1.7.1",
     "cookie-universal": "^2.1.3",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "polka": "next",
-    "session-file-store": "^1.4.0",
     "sirv": "^0.4.0",
-    "svelte-i18n": "^3.0.3",
-    "tailwindcss": "^1.2.0"
+    "svelte": "^3.21.0",
+    "svelte-i18n": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -38,8 +36,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.8",
-    "svelte": "^3.9.1"
+    "rollup-plugin-terser": "^5.3.0",
+    "sapper": "^0.27.12"
   }
 }
