--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "compression": "^1.7.1",
     "cookie-universal": "^2.1.3",
     "express": "^4.17.1",
-    "polka": "next",
-    "sirv": "^0.4.0",
-    "svelte": "^3.21.0",
-    "svelte-i18n": "^3.0.3"
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -37,6 +34,8 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.12"
+    "sapper": "^0.27.12",
+    "svelte": "^3.21.0",
+    "svelte-i18n": "^3.0.3"
   }
 }
