--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
+	"name": "Wavees Portal",
+	"short_name": "Wavees Portal",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
