--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "compression": "^1.7.1",
     "cookie-universal": "^2.1.3",
     "express": "^4.17.1",
+    "moment": "^2.25.3",
+    "simple-parallax-js": "^5.4.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
